...
                Button {
                    withAnimation(.none) {
                        isPresentingActiveDay = true
                    }
                } label: {
                    HStack {
                        Label("Start or Resume Day", systemImage: "play.circle")
                            .font(.headline)
                            .foregroundColor(.accentColor)
                        Spacer()
                        Image(systemName: "chevron.right")
                            .font(.footnote.weight(.semibold))
                            .foregroundStyle(.tertiary)
...
                .listRowSeparator(.hidden)

                Label("\(TimeFormatting.formattedTime(from: dayStartTime, use24HourClock: use24HourClock))–\(TimeFormatting.formattedTime(from: dayEndTime, use24HourClock: use24HourClock))", systemImage: "clock")
                    .listRowSeparator(.hidden)

                HStack {
                    Label("Theme", systemImage: "paintpalette")
                    Spacer()
                    Text(day.theme.name)
                        .padding(4)
                        .foregroundColor(day.theme.accentColor)
                        .background(day.theme.mainColor)
                        .cornerRadius(4)
...
