...
        }
    }
}

extension Day {
    static let fullDay: Day = Day(
        name: "Full Day",
        startTime: TimeInterval(7 * 60 * 60),
        segments: [
            Segment(name: "Wake", duration: TimeInterval(15 * 60)),
            Segment(name: "Sit", duration: TimeInterval(45 * 60)),
            Segment(name: "Eat", duration: TimeInterval(45 * 60)),
            Segment(name: "Walk", duration: TimeInterval(30 * 60)),
...
        startBell: .singleBell,
        manualBell: nil,
        defaultBell: .singleBell,
        theme: .poppy
    )
    static let openingDay: Day = Day(
        name: "Opening Day",
        startTime: TimeInterval(18 * 60 * 60),
        segments: [
            Segment(name: "Sit", duration: TimeInterval(45 * 60)),
            Segment(name: "Walk", duration: TimeInterval(30 * 60)),
            Segment(name: "Dharma Talk", duration: TimeInterval(90 * 60)),
            Segment(name: "Walk", duration: TimeInterval(30 * 60)),
...
